--- a/register/.env.dist
+++ b/register/.env.dist
@@ -16,3 +16,12 @@ PHP_IDE_CONFIG=serverName=codenip_ms_register_service
 ###> symfony/messenger ###
 MESSENGER_TRANSPORT_DSN=amqp://root:password@codenip-ms-rabbitmq-service:5672/%2f
 ###< symfony/messenger ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+###< doctrine/doctrine-bundle ###
