--- a/register/config/packages/messenger.yaml
+++ b/register/config/packages/messenger.yaml
@@ -1,17 +1,22 @@
 framework:
-    messenger:
-        # reset services after consuming messages
-        reset_on_message: true
+  messenger:
+    serializer:
+      default_serializer: messenger.transport.symfony_serializer
+      symfony_serializer:
+        format: json
+        context: { }
 
-        # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
-        # failure_transport: failed
+    transports:
+      async_register_application:
+        dsn: '%env(string:MESSENGER_TRANSPORT_DSN)%'
+        options:
+          vhost: '%env(string:MESSENGER_VHOST)%'
+          exchange:
+            name: '%env(string:MESSENGER_EXCHANGE)%'
+            type: direct
+          queues:
+            register_application_queue:
+              binding_keys: [ register_application_queue ]
 
-        transports:
-            # https://symfony.com/doc/current/messenger.html#transport-configuration
-            # async: '%env(MESSENGER_TRANSPORT_DSN)%'
-            # failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
-
-        routing:
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+    routing:
+      'App\Messenger\Message\UserRegisteredMessage': async_register_application
