--- a/register/.env.dist
+++ b/register/.env.dist
@@ -19,11 +19,6 @@ MESSENGER_VHOST=codenip_microservices
 MESSENGER_EXCHANGE=register_application_exchange
 ###< symfony/messenger ###
 
-###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
-###< doctrine/doctrine-bundle ###
+###> Application Service endpoints ###
+APPLICATION_SERVICE_USERS_ENDPOINT=http://codenip-ms-application-service-web:80/api/internal/users
+###< Application Service endpoints ###
