--- a/register/composer.json
+++ b/register/composer.json
@@ -9,9 +9,7 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "doctrine/annotations": "^2.0",
-        "doctrine/doctrine-bundle": "^2.11",
-        "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^2.17",
+        "guzzlehttp/guzzle": "^7.8",
         "symfony/amqp-messenger": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
